--- a/app/static/css/templates/_quizzes.scss
+++ b/app/static/css/templates/_quizzes.scss
@@ -27,11 +27,11 @@ body {
             line-height: 2rem;
             color: $white;
             font-weight: 100;
-            text-align: center;
         }
 
         h1 {
             font-size: $font-med - .1rem;
+            margin-bottom: 1.5rem;
         }
 
         h5 {
